# solar-forecast

./: .env.example  .env.production  .gitignore  API_CONSOLIDATION_COMPLETE.md  API_ROUTES_ANALYSIS.md  ARCHITECTURE.md  Claude.md  DUPLICATES_FINDINGS.md  DUPLICATES_FINDINGS_UPDATE.md  Dockerfile  FORECASTING_PROCESS_DOCUMENTATION.md  FORECAST_BUG_ANALYSIS.md  FORECAST_CONSOLIDATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  PRD.md  PRD_PYTHON_WORKER.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  README.md  REPOSITORY_SEPARATION_OF_CONCERNS.md  SYSTEM_STATUS.md  TESTING_AND_CLEANUP_SUMMARY.md  ULTRA_DETAILED_WEATHER_IMPLEMENTATION.md  WEATHER_SERVICE_CONSOLIDATION_ANALYSIS.md  WEATHER_SERVICE_MIGRATION_COMPLETE.md  check-forecast-gaps.js  cleanup-duplicate-forecasts.js  docker-compose.yml  fix-database-url.sh  implementation-logs.md  init.sql  logs.md  migration.sql  package-lock.json  package.json  pgadmin_servers.json  playwright.config.ts  python-worker-weather-db-plan.md  python-worker-weather-db-tasks.md  (+20 more)
docs/: PRISMA_SCHEMA.md  (+4 more)
python-worker/: .env.example  check_locations.py  logs.md  pyproject.toml  setup_test_location.py  start.sh  test_complete_flow.py  test_end_to_end_weather.py  test_forecast_integration.py  test_full_integration.py  test_sveltekit_client.py  test_weather_endpoints.py  test_weather_service.py
python-worker/app/: __init__.py  main.py
python-worker/app/core/: config.py  database.py  task_manager.py
python-worker/app/integrations/: sveltekit.py
python-worker/models/: crispvol_unirea_feature_importance.csv  envolteco_silistea_feature_importance.csv  maghebo_srl_feature_importance.csv
(+288 files in other folders)
